fix menu bar z-index

--- a/wedding-fe/src/styles.scss
+++ b/wedding-fe/src/styles.scss
@@ -27,6 +27,7 @@ body {
 mat-toolbar {
   padding: 8px 16px !important;
   position: fixed;
+  z-index: 3;
 }
 
 mat-sidenav-container {
